# memory-benchmark-wasm-runtimes

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  build_modules.sh  build_wamr_aot_module.sh  justfile
benchmark/: Cargo.toml  build.rs  memory.x  rust-toolchain.toml
benchmark/.cargo/: config.toml
benchmark/src/: lib.rs  main.rs  wasmtime_platform.rs
benchmark/src/tiny/: imports.rs  mod.rs
benchmark/src/wamr/: mod.rs
benchmark/src/wamr/platform/: allocation.rs  basic.rs  bsearch.rs  cache.rs  math.rs  memory_mapping.rs  mod.rs  printing.rs  quicksort.rs  stack_management.rs  strings.rs
benchmark/src/wasmi/: mod.rs  wasm.rs
benchmark/src/wasmtime/: mod.rs
benchmark/wamr_specific/platform/embassy/: platform_internal.h
benchmark_module/: Cargo.toml  rust-toolchain.toml
benchmark_module/.cargo/: config.toml
benchmark_module/src/: lib.rs
src/wasmtime/: mod.rs
tinywasm_precompile/: Cargo.toml
tinywasm_precompile/src/: main.rs
wasmtime_precompile/: Cargo.toml
wasmtime_precompile/src/: main.rs
