[package]
name = "memory-benchmark"
version = "0.1.0"
edition = "2021"

[features]

default = ["board-nrf53"]

board-nrf54 = ["embassy-nrf/nrf54l15-app-s"]
board-nrf53 = ["embassy-nrf/nrf5340-app-s"]

engine-wasmi = ["dep:wasmi"]
engine-tinywasm = ["dep:tinywasm"]
engine-wasmtime = ["dep:wasmtime"]
engine-wamr = ["dep:libm"]
wamr-aot = []

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
# spin = "0.10.0"

# postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
# serde = { version = "1.0.216", default-features = false, features = [
#     "derive",
#     "alloc",
# ] }


embassy-executor = { path = "../third_party/embassy/embassy-executor", features = [
    "arch-cortex-m",
    "executor-thread",
    "task-arena-size-12288",
] }
embassy-time = { path = "../third_party/embassy/embassy-time", features = [
    "tick-hz-32_768",
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-nrf = { path = "../third_party/embassy/embassy-nrf", features = [
    "time-driver-rtc1",
    "gpiote",
] }
embedded-alloc = "0.5"

wasmi = { git = "https://github.com/wasmi-labs/wasmi", rev = "6fe4cad04ea6c735231a66e68d5ab38a973df78d", default-features = false, optional = true }
# dlmalloc = { version = "0.2", default-features = false }

tinywasm = { git = "https://github.com/explodingcamera/tinywasm", rev = "73c136c645460d4f2ea9300864bddc9ad01a6bae", default-features = false, features = [
    "archive",
    "parser",
], optional = true }


wasmtime = { version = "38.0.4", default-features = false, features = [
    "runtime",
    "pulley",
], optional = true }
# heapless = { version = "0.9.2", default-features = false, features = ["alloc"] }

libm = { version = "0.2.15", optional = true }

[build-dependencies]
cc = "1.0"
bindgen = "0.72.1"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"
